--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"illuminate/html": "~5.0",
         "gloudemans/shoppingcart": "dev-master",
-        "laracasts/flash": "~1.3"
+        "laracasts/flash": "~1.3",
+        "intervention/image": "~2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
