--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"illuminate/html": "~5.0",
         "gloudemans/shoppingcart": "dev-master",
         "laracasts/flash": "~1.3",
-        "intervention/image": "~2.1"
+        "intervention/image": "~2.1",
+		"jacobbennett/pjax": "0.6.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
