--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.8",
-    "laravel-elixir": "*"
+    "laravel-elixir": "*",
+    "jquery-pjax": "1.9.6"
   }
 }
